syntax = "proto3";

package admin;

service AdminService {
  rpc CreateAdmin (CreateAdminRequest) returns (AdminResponse);
  rpc ListAdmins (Empty) returns (AdminListResponse);
}

message CreateAdminRequest {
  string title = 1;
  string content = 2;
}

message AdminResponse {
  string id = 1;
  string title = 2;
  string content = 3;
  string created_at = 4;
}

message AdminListResponse {
  repeated AdminResponse admins = 1;
}

message Empty {}